--- a/memoria/tex/capitulos/capitulo-8.tex
+++ b/memoria/tex/capitulos/capitulo-8.tex
@@ -760,18 +760,16 @@ La forma por tanto de saber si el punto está o no a la sombra es lanzar un rayo
 
 Y para calcular si un rayo impacta o no con el fractal utilizamos ray-marching, por este motivo no ha sido posible hacer esta mejora antes. 
 
-%%%%%%%%%%%%%%%%%%%%%%% AQUI %%%%%%%%%%%%%%%%%%%%
-
-Pensemos primero en cómo hacer notar el efecto de una única fuente de luz direccional sobre el plano. Aprovecharemos el algoritmo ray-marching para esto. El método consiste en, una vez detectada una intersección rayo-plano y conocer el punto $p$ del plano en el que se produce dicha intersección, crear un rayo en la dirección de la fuente de luz y mediante ray-marching detectar una posible intersección con el conjunto que se esté visualizando en ese momento. En caso de encontrarla, consideraremos que el punto está en la sombra provocada por dicha fuente de luz, por lo que multiplicaríamos por una constante cercana a 0 el color que calcula el modelo de iluminación, de tal forma que el color se oscurece, dando esa sensación de sombra. Crearemos entonces una función que devuelva una constante igual a $0$ si el punto está a la sombra e igual a $1$ si no. Para abreviar el código, llamamos en el siguiente código \verb|get_dist| a la SDF del objeto que se esté visualizando, la cual depende de la variable \verb|u_fractal|.
-
+Necesitamos entonces una función que, dado un punto, trace un rayo en dirección de una función dada y devuelva 0 si hay intersección con el fractal y 1 si no lo hace. Fijémonos que las iteraciones de ray-marching deben comenzar a una pequeña distancia (mayor que $\varepsilon$) del punto que queremos evaluar, porque en caso de que este punto esté en el propio fractal y se comience a distancia $0$ el ray marching finalizaría en la primera iteración y consideraría que todos los puntos del fractal están a la sombra, cosa que no tiene sentido. Para abreviar el código, llamamos en el siguiente código \verb|get_dist| a la SDF del objeto que se esté visualizando, la cual depende de la variable \verb|u_fractal|.
 \begin{lstlisting}
-float one_light_shadow(vec3 p, Directional_light light) {
+float light_is_visible(Directional_light light, vec3 p) {
     Ray R;
-    R.orig = p; R.dir = light.dir;
-    float t = 0.0;
+    R.orig = p; R.dir = normalize(light.dir);
+    float t = 2.0*u_epsilon;
     float h;
-    for(int i = 0; i < MAX_STEPS; i++ ) {
-        h = get_dist(ray_at(R, t));
+    // Ray Marching 
+    for(int i = 0; i < 50; i++ ) {
+        h=get_dist(ray_at(R,t));
         if(h < u_epsilon)
             return 0.0;
         t += h;
@@ -781,26 +779,45 @@ float one_light_shadow(vec3 p, Directional_light light) {
 }
 \end{lstlisting}
 
-Sin embargo, si multiplicamos por $0$ el valor que devuelva el modelo de iluminación el resultado sería una sombra completamente negra, como en la imagen \ref{fig:sombras-feas} (a). Para evitarlo, fijaremos una constante $\alpha$ tal que ese será el valor mínimo por el cual se multiplicaría el color. Por ejemplo, si fijamos $\alpha=0.3$ y el punto está a la sombra multiplicaríamos el color que calcula el modelo de Phong por 0.3, de forma que se oscurecería el píxel pero no sería completamente negro, como en la imagen \ref{fig:sombras-feas} (b). Para ello necesitamos una transformación lineal que transforme reales en $[0,1]$ a valores en $[\alpha,1]$. La transformación deseada sería por tanto $t\mapsto\frac{t}{1-\alpha}+\alpha$. 
-
-\begin{figure}[ht]
-    \centering
-    \begin{tabular}{cc}
-        \includegraphics[scale=0.28]{img/C8/sombra-1.png} &
-      \includegraphics[scale=0.315]{img/C8/sombra-2.png} \\    
-    (a) $\alpha=0$ & (b) $\alpha=0.3$  \\
-    \end{tabular}
-    \caption{Primera forma de representar sombras}
-    \label{fig:sombras-feas}
-\end{figure}
-
-Aún así, los límites de las sombras están muy marcados, lo cual queda poco realista. La apariencia mejoraría si se suavizaran los bordes, asignándole valores intermedios entre $0$ y $1$ a puntos que, aunque no estén a la sombra del conjunto, estén cerca. El truco consiste en pensar en los rayos que, aunque no impacten con el conjunto, pasen muy cerca de él. En estos casos pondríamos los puntos del plano en una especie de penumbra, de forma que cuanto más cerca pase del conjunto, más oscuro se representará, es decir, se devolverá un valor más cercano a $0$. Por tanto, calcularemos un factor de penumbra en cada iteración de ray-marching y nos quedaremos con el menor de ellos. Tan solo tenemos que añadir una línea de código.
+Y ahora debemos modificar la función que evalúa el modelo de iluminación, de forma que para cada luz direccional hace una llamada a \verb|light_is_visible| y multiplica el resultado por la componente difusa y la especular, de forma que si el punto está completamente a la sombra únicamente se sumaría la componente ambiental. En caso de que el punto esté en la sombra de una luz pero iluminado por otra se sumaría únicamente la componente ambiental de una pero también la difusa y especular de la otra. Por último, si está iluminado por las dos se evaluarían las tres componentes: ambiental, difusa y especular. 
 
 \begin{lstlisting}
-float one_light_shadow(vec3 p, Directional_light light) {
+vec4 evaluate_lighting_model( Directional_light lights[ARRAY_TAM], 
+    int num_lights, Hit_record hr ) {
+    // ... 
+    float visibility;
+    vec4 L_in = vec4(0.0, 0.0, 0.0, 1.0);
+    for(int i = 0; i < ARRAY_TAM; i++){
+        if(i == num_lights) break;
+        // ... 
+        visibility = light_is_visible(light, hr.p);
+        // ... 
+        L_in += ambient + visibility * light.color * (diffuse + specular);
+
+    }
+}
+    return vec4(L_in.xyz, 1.0);
+}
+\end{lstlisting}
+
+El resultado es el que se puede observar en la imagen \ref{fig:sombra-sin-suavizado}, donde podemos ver la sombra que provoca el conjunto de Julia $\mathcal{J}_{-0.12+0.75i}$ (que por cierto es la generalización 3D de la imagen \ref{fig:julia-explicados} (a)) sobre puntos de sí mismo y en puntos del plano.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.45]{img/C8/sombra-1.png}
+    \caption{Sombras arrojadas}
+    \label{fig:sombra-sin-suavizado}
+\end{figure}
+
+Así conseguimos sombras arrojadas por todas las luces que tengamos en la escena. La manera más óptima y correcta que hemos conseguido de iluminar la escena es mediante dos luces direccionales blancas cuyos vectores de dirección son $(-1,1,0)$ y $(1,1,0)$, es decir, dos luces que iluminan `desde arriba y por ambos lados' la escena. Sin embargo, esto provoca que la parte de abajo de los fractales siempre se vea oscura, por lo que hemos dotado a la escena de una tercera luz direccional en la dirección $(0,-1,0)$, con la particularidad de que esta no arroja sombras (siempre se le asigna \verb|visibility=1.0|), simplemente aporta iluminación a las partes bajas.
+
+El resultado hasta ahora es bueno, pero aún así los límites de las sombras están muy marcados, lo cual queda poco realista. La apariencia mejoraría si se suavizaran los bordes, asignándole valores intermedios entre $0$ y $1$ a puntos que, aunque no estén en la sombra del conjunto, estén cerca. El truco consiste en pensar en los rayos que, aunque no impacten con el conjunto, pasen muy cerca de él. En estos casos pondríamos los puntos en cuestión en una especie de penumbra, de forma que cuanto más cerca pase del conjunto, más oscuro se representará, es decir, se devolverá un valor más cercano a $0$. Por tanto, calcularemos un factor de penumbra en cada iteración de ray-marching y nos quedaremos con el menor de ellos. Tan solo tenemos que añadir una línea de código a \verb|light_is_visible|.
+
+\begin{lstlisting}
+float light_is_visible(Directional_light light, vec3 p) {
     // ... 
     float res = 1.0; // Inicialmente 1
-    float k = 8.0; // Constante de suavizado
+    float k = 16.0; // Constante de suavizado
     for(int i = 0; i < MAX_STEPS; i++ ) {
         h = get_dist(ray_at(R, t));
         if(h < u_epsilon)
@@ -810,63 +827,40 @@ float one_light_shadow(vec3 p, Directional_light light) {
         t += h;
         if(t >= MAX_DIST) break;
     }
-    float alpha = 0.3;      // Smooth constant
-    res = res/(1.0 - alpha) + alpha;
     return res;
 }
 \end{lstlisting}
 
-La constante \verb|k| es un factor que indica si el suavizado es más o menos notable. El valor $8$ es suficientemente bueno para nuestro cometido, véase el resultado final en la imagen \ref{fig:sombra-una-fuente}, pero mostramos en las imágenes \ref{fig:sombras-k} la representación con los valores $k=2,32$. Nótese como en la imagen \ref{fig:sombras-k} (a) el sombreado es muy suave y en la imagen \ref{fig:sombras-k} (b) es bastante más marcado.
+La constante \verb|k| es un factor que indica si el suavizado es más o menos notable. El valor $16$ es suficientemente bueno para nuestro cometido, véase el resultado final en la imagen \ref{fig:sombras-final}, pero mostramos en las imágenes \ref{fig:sombras-k} la representación con los valores $k=2,32$. Nótese como en la imagen \ref{fig:sombras-k} (a) el sombreado es muy suave y en la imagen \ref{fig:sombras-k} (b) es bastante más marcado.
 
 \begin{figure} [ht]
     \centering
-    \includegraphics[scale = 0.5]{img/C8/sombra-4.png}
-    \caption{Sombra arrojada con suavizado}
-    \label{fig:sombra-una-fuente}
+    \includegraphics[scale = 0.45]{img/C8/sombras-final.png}
+    \caption{Resultado final de la modificación}
+    \label{fig:sombras-final}
 \end{figure}
+
 
 \begin{figure}[ht]
     \centering
     \begin{tabular}{cc}
-        \includegraphics[scale=0.335]{img/C8/sombra-3.png} &
-      \includegraphics[scale=0.35]{img/C8/sombra-5.png} \\    
+        \includegraphics[scale=0.4]{img/C8/sombras-k-2.png} &
+      \includegraphics[scale=0.42]{img/C8/sombras-k-32.png} \\    
     (a) $k=2$ & (b) $k=32$  \\
     \end{tabular}
     \caption{Sombras con el parámetro $k=2,32$}
     \label{fig:sombras-k}
 \end{figure}
 
-Una vez tenemos un método de representar las sombras provocadas por una única fuente de luz es momento de extender la técnica para poder representar sombras con varias fuentes de luz. Pensemos en un objeto iluminado por varias fuentes de luz. Cada una provoca su propia sombra, pero un punto del suelo puede estar en la sombra provocada por una fuente de luz mientras está iluminado por otra, que hace la sobra de la primera menos notable. La forma de simular este efecto es promediar el efecto de las distintas luces. Por ejemplo, si suponemos dos fuentes de luz:
-\begin{itemize}
-    \item Un punto que esté lejos del objeto y por tanto iluminado por las dos fuentes tendrá un factor de 1 en ambos casos, promediando 1, es decir, no hay ninguna sombra.
-    \item Si el punto está en la sombra de una fuente pero iluminado por otra tendrá un factor de 0 por la primera y de 1 por la segunda, resultando en $0.5$, es decir, una sombra moderada.
-    \item En un último caso, puede estar en la sombra de ambas, resultando un factor de $0$ en cada una de ellas, promediando $0$.
-\end{itemize}
-
-Por tanto, el código sería el siguiente:
-\begin{lstlisting}
-float multi_light_shadow(vec3 p, 
-    Directional_light[ARRAY_TAM] lights, int num_lights) {
-    float shadow = 0.0;
-    for(int i = 0; i < ARRAY_TAM; i++) {
-        if(i == num_lights) break;
-        shadow += one_light_shadow(p, lights[i]);
-    }
-    shadow /= float(lights_shading);
-    float alpha = 0.0;      // Smooth constant
-    shadow = shadow/(1.0 - alpha) + alpha;
-    return shadow;
-}
-\end{lstlisting}
-
-En este caso hemos tomado $\alpha=0$ porque con un valor más alto a penas se hacían notar las sombras. El resultado obtenido es el observable en la imagen \ref{fig:sombra-varias-fuentes}, en la cual podemos ver el efecto suavizado provocado por la interacción entre las dos fuentes de luz.
+Por último, para apreciar de una forma más claro el efecto de la fuente de luz que ilumina la parte baja del fractal, presentamos en la imagen \ref{fig:desde-abajo} el conjunto de ejemplo que estamos utilizando en todas las imágenes de esta sección visto desde abajo, que gracias a la luz direccional cuya dirección es $(0,-1,0)$ se ve alumbrado.
 
 \begin{figure} [ht]
     \centering
-    \includegraphics[scale = 0.4]{img/C8/sombras-final.png}
-    \caption{Sombras arrojadas por varias fuentes de luz}
-    \label{fig:sombra-varias-fuentes}
+    \includegraphics[scale = 0.45]{img/C8/desde-abajo.png}
+    \caption{Conjunto de Julia visto desde abajo}
+    \label{fig:desde-abajo}
 \end{figure}
+
 
 \subsection{Antiliasing}
 
